// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParagraphContainer should render correctly 1`] = `
.emotion-6 {
  grid-column: 1 / span 6;
}

@media (max-width:25rem) {
  .emotion-6 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .emotion-6 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-6 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .emotion-6 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .emotion-6 {
    max-width: initial;
  }
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

.emotion-2 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.emotion-2:focus,
.emotion-2:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

.emotion-0 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  font-family: inherit;
  font-weight: inherit;
}

<div>
  <div
    class="emotion-6 emotion-7"
  >
    <p
      class="emotion-4 emotion-5"
    >
      <b>
        This is some text.
      </b>
      <a
        class="emotion-2 emotion-3"
        href="/bbc-test"
      >
        Some text
        <b>
           for the 
        </b>
        <i
          class="emotion-0 emotion-1"
        >
           link!
        </i>
      </a>
    </p>
  </div>
</div>
`;

exports[`ParagraphContainer should render correctly with inline block 1`] = `
.emotion-6 {
  grid-column: 1 / span 6;
}

@media (max-width:25rem) {
  .emotion-6 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .emotion-6 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-6 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .emotion-6 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .emotion-6 {
    max-width: initial;
  }
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

.emotion-0 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.emotion-0:focus,
.emotion-0:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

.emotion-2 {
  padding-bottom: 1.5rem;
  margin: 0;
}

<div>
  <div
    class="emotion-6 emotion-7"
  >
    <p
      class="emotion-4 emotion-5"
    >
      <b>
        This is some text.
      </b>
      <span
        class="emotion-2 emotion-3"
        lang="fa"
      >
        <a
          aria-label="چیسربرگرundefined"
          class="emotion-0 emotion-1"
          href="https://google.com"
        >
          چیسربرگر
        </a>
      </span>
    </p>
  </div>
</div>
`;
